# auto_grocery

./: .dockerignore  .gitignore  HowToInstantiateServices.txt  README.md  design_notes.txt  dhiraj.txt  docker-compose.yml  go.mod  go.sum
analytics/: .env  AnalyticsService_Guide.txt  CMakeLists.txt  Dockerfile
analytics/cmd/analytics/: main.cpp
analytics/fbs/: analytics.fbs  analytics_generated.h
analytics/internal/metrics/: messages_generated.h
analytics/src/: main.cpp
client/: README.md  api.py  app.py  items.py
docker/: analytics.Dockerfile  inventory.Dockerfile  ordering.Dockerfile  pricing.Dockerfile  robots.Dockerfile
docker/postgres-init/: 00-create-databases.sql  10-ordering-schema.sql  20-inventory-schema.sql  30-pricing-schema.sql
frontend/client/: .client_auth_cache.json  app.py
frontend/truck/: app.py
inventory/: .env  InventoryService_Guide.txt
inventory/cmd/inventory/: main.go
inventory/db/migrations/: 000001_init_inventory.up.sql  000002_add_unit_cost_to_stock.down.sql  000002_add_unit_cost_to_stock.up.sql
inventory/fbs/: order.fbs
inventory/fbs/RobotMessages/: Item.go  OrderBroadcast.go
inventory/internal/handler/: grpc.go
inventory/proto/: inventory.pb.go  inventory.proto  inventory_grpc.pb.go  pricing.pb.go  pricing.proto  pricing_grpc.pb.go
ordering/: .env  OrderingService_Guide.txt
ordering/cmd/ordering/: main.go
ordering/proto/: inventory.pb.go  inventory.proto  inventory_grpc.pb.go
pricing/: .env  PricingService_Guide.txt
pricing/proto/: inventory.pb.go  inventory.proto  inventory_grpc.pb.go  pricing.pb.go  pricing.proto  pricing_grpc.pb.go
robots/: .env  CMakeLists.txt  Dockerfile  RobotsService_Guide.txt
robots/fbs/: order.fbs  order_generated.h
robots/internal/bot/: main.cpp
robots/proto/: inventory.grpc.pb.cc  inventory.grpc.pb.h  inventory.pb.cc  inventory.pb.h  inventory.proto
robots/src/: main.cpp
schema/: messages.fbs
(+40 files in other folders)
